--- a/resources/map_config/base_map.toml
+++ b/resources/map_config/base_map.toml
@@ -1,5 +1,5 @@
 snow_hex_list = [[8, 2], [11, 1], [8, 0], [9, -1], [10, -2], [9, -3]]
-water_hex_list = [[0, 4], [6, 0], [8, -2], [-1, -3], [0, -4], [5, -1]]
+water_hex_list = [[0, 4], [6, 0], [8, -2], [1, -3], [0, -4], [5, -1],[-1,3]]
 grass_hex_list = [
     [-4, 4],
     [-5, 3],
